https://imgur.com/a/azGVCqK

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Creates a livestream of mikrotik/routeros online hotspot users.
 
-Output parameters are customizabled
+Output parameters are customizable
 
 Setup:
 
